basic html structure

--- a/index.html
+++ b/index.html
@@ -57,7 +57,60 @@
       
     <div class="content">content
         <div class="main-content"></div>
-        <div class="side-content"></div>
+          <p>your projects</p>  
+          <div class="project-1">
+            <div class="project-title"></div>
+            <p>text</p>
+          </div>
+          <div class="project-2">
+            <div class="project-title"></div>
+            <p>text</p>
+          </div>
+          <div class="project-3">
+            <div class="project-title"></div>
+            <p>text</p>
+          </div>
+          <div class="project-4">
+            <div class="project-title"></div>
+            <p>text</p>
+          </div>
+          <div class="project-5">
+            <div class="project-title"></div>
+            <p>text</p>
+          </div>
+          <div class="project-6">
+            <div class="project-title"></div>
+            <p>text</p>
+          </div>
+
+
+        <div class="side-content">
+            <div class="announcements">
+                <div class="announcement-1">
+                    <div class="announcement-title"></div>
+                    <p>text</p>
+                </div>
+                <div class="announcement-2">
+                    <div class="announcement-title"></div>
+                    <p>text</p>
+                </div>
+                <div class="announcement-3">
+                    <div class="announcement-title"></div>
+                    <p>text</p>
+                </div>
+            </div>
+            <div class="trending">
+                <div class="trending-1">
+                    <li><img class="menu-icon" src="./img/access-point-check.svg">Settings</li>
+                </div>
+                <div class="trending-2">
+                    <li><img class="menu-icon" src="./img/access-point-check.svg">Settings</li>
+                </div>
+                <div class="trending-3">
+                    <li><img class="menu-icon" src="./img/access-point-check.svg">Settings</li>
+                </div>
+            </div>
+        </div>
     </div>
    
  
