estrutura do html + tiles que se autoajustam

--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
         </div>
     </div>
       
-    <div class="content">content
-        <div class="main-content"></div>
-          <p>your projects</p>  
+    <div class="content">
+        <div class="main-content">
+          <p>your projects</p>
+          <div class="project-tiles"> 
           <div class="project-1">
             <div class="project-title"></div>
             <p>text</p>
@@ -82,10 +83,13 @@
             <div class="project-title"></div>
             <p>text</p>
           </div>
+        </div> 
+        </div>
 
 
         <div class="side-content">
             <div class="announcements">
+                <p>announcements</p>  
                 <div class="announcement-1">
                     <div class="announcement-title"></div>
                     <p>text</p>
@@ -100,6 +104,7 @@
                 </div>
             </div>
             <div class="trending">
+                <p>trending</p> 
                 <div class="trending-1">
                     <li><img class="menu-icon" src="./img/access-point-check.svg">Settings</li>
                 </div>
